# devinlittlenet-services

./: .gitignore  Cargo.toml  Dockerfile.auth_backend  Dockerfile.gradegetter  Dockerfile.gradegetter_backend  Dockerfile.nanopass_backend  Dockerfile.notification_backend  Dockerfile.smalltalk_backend  README.md  docker-bake.hcl
.sqlx/: query-059ef26ed1ef149ae4060b064faf38c757e7098573effcf50e230073c45890dd.json  query-06cf133bcd96c778598426094fa56a33d08b66c45b2e8a489ca6a0dfc5924c32.json  query-1027e5c83afb3b6bce815d7f616b1f8da65f05261f97be98cbcd31946c53493b.json  query-1131ff11522ca537fd734f488b8f8cdf6f68bc9f196c3fb335080ca1b6ff6cf9.json  query-129a3a0b603ca92a144f60a8c961be509af2965031f7bcdb11426ef6b3e044ae.json  query-1c0cbcff33d4b946dd0a9733f5a2034a3affa3eba21886b582e20882c8d93580.json  query-233bbf3a96bef0acc66410f14c7e1e79a2216ef1591e91dbf283f5af5b9c97ed.json  query-234cc397b20756e5e4a5482e24cffb30d0f616c1d34465a5fb2b33c14e5c9b4e.json  query-2636a759a0c145802a38b46ac253bc456b5907fffde1f8903939b9a6e04c684d.json  query-2805074050d84d00d4e6ac2bd5d6cb1ece4c7879c1331de046aae0601a099cb2.json  query-2f196a511351e9fae90e0cf2fbdcb445055c2b313f1b54997693f3a6e012317b.json  query-30a3f98919aacd60b80feab6936b1860a497267d5f2cd2d550226c3130ec0841.json  query-381db38c758c4baef8de5a8b2bb94ed52a2e3d099596ec6b85032c915bfbe136.json  query-3f37f45f48a7910cffa2282159f2c65d65228a45f58e9acdcee41cf2fabb295b.json  query-458efd52055292bb607f3eceba91b4ef732201adb9d631251f8c693fb1657ce7.json  query-4bde1d8d07901c975083ea43a4485ad803f76f6b9e9625933f6ec80b58615675.json  query-4c7751b60c7ef0c7130a317698af2a95869ae96f37a0b1da2ff7c800b1512013.json  query-4f08a0b2f1bb3e7c025611f113c5b1b53f9ba5e9cb13d01454f63b01a1192966.json  query-525216729eca8655efe723e54e675340c331648fb01376dfbe5e4203398a017c.json  query-59181df70276639b83f4e70464b6b4769aed0e143a5cc48b9e8776cf38fa0b08.json  query-5af17b78e0d58cc2d222abda3d7802e2cec223a98f56c45c6b58266dc3dea949.json  query-5e706ea0d29e3da2c809be86d7c8dfe846db036756418b20d5ca7e8497af1da6.json  query-5f534434959fc7ec60a9b3be22d67f2fe8341aa3fd6024407cc787b39a3c7a66.json  query-640c4ab5dda98c0bbeb1fbf38fbe53b0fea5d13e6450a086961f0ac37c2f0775.json  query-684fab24e49992a0f075536fa75e83693e0305cfcf3bbb54ab156cfd0d1fd500.json  query-6fe74ed0039aaa0c5be1b74bbc897f1bd6a6a6fb54d4acb7ce4e827c48c96385.json  query-79c408cf835ff3655d319ded22d34e80aca9c4c344626d229d77639ce989dcf3.json  query-833d492ea17069196e22d919e2f7f38ed9fd540c4ab81792dc154a10036d6084.json  query-87b09ee9e222e7767aef3ae07ab27132368634aeae4fbe6498243e1735f4ebef.json  query-8a7769f056a9732a427237265339e15bc27b7242247c0211dac69f2165378c5d.json  query-a11c839607b8aa4fe405cdf335e81a6c2f55042139b049d81b2cc260c3e9a807.json  query-a3235ba8d55d9294237303ed3b66c9b4cdffd5d31296ff657daae57cec33300b.json  query-a8f1d496d3c7fc15813fe83e3dd3fad1cc8fd4c7c44da2b44d0b737918b49598.json  query-aab12390d3b3e106a1d083e6341d9848b81fcd5a8c1f05bf3579e2a7251c8e61.json  query-adbd858a6aa2e6176c35ac1509d236d0e05ad876109ab4689cf157184f8f23fa.json  query-afee269626a32b4cc958f83c74e9cd23d083bf201c4bcb9308d224177a9e6c37.json  query-b0c39e80f88b36a52e0f0b9c1d5ecbce0ef6ca9aea010def46f1e126106bd2e0.json  query-b5192625c8c218884f014f0f3a9a239ebf8804f0edbca8b8c1f6abcd010a3665.json  query-b671c282488be59e805f776a453745e689384c3600000f7fe391445749522b3f.json  query-bf6e01de7c0e8b1ada6f8c1faabd80ec935f0d1986d0bf43dff17b60c8e3a8f0.json  (+20 more)
auth_backend/: Cargo.toml  README.md  env.template
auth_backend/migrations/: 20241201164919_users.sql  20260402192424_refresh_token.sql
auth_backend/src/: main.rs
auth_backend/src/middleware/: internal.rs  jwt.rs
auth_backend/src/routes/: admin.rs  auth.rs  internal.rs  mod.rs  user.rs
auth_backend/src/util/: hash.rs  mod.rs  random.rs  secrets.rs
chart/: Chart.yaml  values.yaml
chart/templates/: NOTES.txt  deployment-auth-backend.yaml  deployment-gradegetter-backend.yaml  deployment-gradegetter.yaml  deployment-nanopass-backend.yaml  deployment-notification-backend.yaml  ingress.yaml  service-auth-backend.yaml  service-auth_backend.yaml  service-gradegetter-backend.yaml  service-gradegetter_backend.yaml  service-nanopass-backend.yaml  service-notification-backend.yaml
common/: Cargo.toml  build.rs
common/src/: auth.rs  gradegetter.rs  lib.rs  nanopass.rs  notification.rs  smalltalk.rs
crates/crypto_utils/: Cargo.toml
crates/crypto_utils/src/: lib.rs
crates/friendly_namer/: Cargo.toml
gradegetter/: README.md
gradegetter/crypto_utils/src/: lib.rs
gradegetter/gradegetter/: Cargo.toml  env.template
gradegetter/gradegetter/src/: main.rs  secrets.rs
gradegetter/gradegetter_backend/: Cargo.toml  env.template
gradegetter/gradegetter_backend/migrations/: 20250910164919_schoology_auth.sql  20250910174919_grades.sql
gradegetter/gradegetter_backend/src/: main.rs
gradegetter/gradegetter_backend/src/middleware/: internal.rs  jwt.rs
gradegetter/gradegetter_backend/src/routes/: auth.rs  grades.rs  internal.rs  mod.rs
gradegetter/gradegetter_backend/src/utils/: secrets.rs
gradegetter/tokengetter/: index.js  package.json
nanopass_backend/: Cargo.toml  README.md
nanopass_backend/src/: main.rs
nanopass_backend/src/middleware/: internal.rs  jwt.rs  mod.rs
nanopass_backend/src/routes/: files.rs  internal.rs  mod.rs
nanopass_backend/src/utils/: mod.rs  structs.rs
notification_backend/: Cargo.toml  README.md  env.template
notification_backend/migrations/: 20241201164919_service_users.sql  20260503174925_push_subscriptions.sql
notification_backend/src/: main.rs
notification_backend/src/middleware/: internal.rs  jwt.rs
notification_backend/src/routes/: internal.rs  mod.rs  noties.rs
notification_backend/src/utils/: jwt.rs  secrets.rs
service_connector/src/: main.rs
smalltalk_backend/: Cargo.toml
smalltalk_backend/migrations/: 20260511203412_smalltalk_notes.sql
smalltalk_backend/src/: main.rs
smalltalk_backend/src/middleware/: jwt.rs
smalltalk_backend/src/routes/: internal.rs  mod.rs  notes.rs
smalltalk_backend/src/utils/: secrets.rs
