[workspace]
resolver = "3"
members = [
"auth_backend/", "notification_backend/", "gradegetter/gradegetter", "gradegetter/gradegetter_backend/", "gradegetter/crypto_utils/", "nanopass_backend/"]


[workspace.dependencies]
tokio = {version = "1", features = ["full"]}
axum = {version = "0.8.9", features = ["macros"]}
axum-extra = "0.12.6"
axum-server = {version = "0.8", features = ["tls-rustls"]}
axum-prometheus = "0.10"
hyper = {version = "1.9.0"}
hyper-tls = "0.6.0"
tower-http = { version = "0.6.8", features = ["cors"]}
tower = "0.5.3"
utoipa = {version = "5.4", features = ["axum_extras", "time", "uuid"]}
utoipa-swagger-ui = {version = "9.0", features = ["axum"]}
rustls = { version = "0.23.37", features = ["ring"] }
ring = "0.17.14"
reqwest = {version = "0.12"}
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }
futures-util = "0.3.32"
serde = {version = "1", features = ["derive"]}
serde_json = {version = "1"}
sha2 = {version = "0.10"}
chrono = "0.4"
argon2 = "0.5"
sqlx = {version = "0.8.6"}
uuid = {version = "1.23", features = ["v4", "serde"]}
time = "0.3.44"
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
web-push = "0.11"
dashmap = "6.1"
tracing = "0.1.44"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"] }
anyhow = "1.0"
dotenvy = "0.15.7"
constant_time_eq = "0.5"
regex = "1"
scraper = "0.26"
aes-gcm = "0.10"
aes = "0.9"
rand = "0.10"
base64 = "0.22"
once_cell = "1.21"
crypto_utils = { path = "./gradegetter/crypto_utils" }
#totp-rs = { version = "5.7.0", features = ["qr"]}  # used to be in here for something else.

[profile.release]
panic = "abort" # Strip expensive panic clean-up logic
codegen-units = 1 # Compile crates one after another so the compiler can optimize better
lto = true # Enables link to optimizations
opt-level = 3 # Use all optimizations for best performance
strip = true # Remove debug symbols


