[package]
name = "common"
version = "0.1.0"
edition = "2024"

[features]
auth = ["dep:sqlx"]
gradegetter = []
nanopass = []
notifications = []
smalltalk = ["dep:sqlx"]

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
chrono.workspace = true
utoipa.workspace = true
uuid.workspace = true
dashmap.workspace = true
anyhow.workspace = true
thiserror.workspace = true
strum.workspace = true
sqlx = { workspace = true, optional = true }
dotenvy.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
tracing-opentelemetry.workspace = true
opentelemetry.workspace = true
opentelemetry_sdk.workspace = true
opentelemetry-otlp.workspace = true
tonic.workspace = true
prost.workspace = true
tonic-prost.workspace = true
webrtc.workspace = true

[build-dependencies]
anyhow.workspace = true
tonic-prost-build.workspace = true
